--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
 .App {
+  min-height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: "Montserrat";
+}
+
+.header {
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 10px 15px;
+  color: #fff;
+  z-index: 100;
+  background: #0b0b0b;
+}
+
+.header_inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+}
+
+a {
+  background-color: transparent;
+}
+
+.logo {
+  color: #ffffff;
+  display: flex;
+  text-decoration: none;
+  font-weight: bold;
+  font-display: auto;
+  padding-right: 1vw;
+}
+
+.logo img {
+  height: 42px;
+  border-radius: 40%;
+}
+
+.logo p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  color: #6f42c1;
+  text-decoration: none;
+  padding-left: 10px;
+  font-size: large;
+  font-family: "Montserrat", "sans-serif";
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.header_right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.menu_inner {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+  font-size: 1rem;
+  list-style: none;
+}
+
+.menu_inner li {
+  margin: 0 15px;
+}
+
+@media (min-width: 1400px) {
+  .what_content {
+    position: inherit;
+    float: left;
+    width: 100%;
+    height: 100%;
+    text-align: left;
+    max-width: 42rem;
+    padding: 0.5rem;
+  }
+}
+
+footer {
+  border-top: 1px solid #6f42c1;
+  width: 70%;
+  max-width: 1400px;
+  margin: auto;
+  text-align: center;
+  padding: 50px 0;
+}
+
+@media (max-width: 768px) {
+  footer {
+    width: 95%;
+  }
+}
+
+.footer_inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.footer_content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #999;
+  width: 100%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.bi-discord {
+  font-size: 30px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
