--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,12 @@
   background: #0b0b0b;
 }
 
+@media (max-width: 768px) {
+  .header {
+    padding: 10px 10px;
+  }
+}
+
 .header_inner {
   display: flex;
   align-items: center;
@@ -77,7 +83,7 @@ img {
   justify-content: flex-start;
   max-width: 100%;
   margin: 0 auto;
-  padding: 0 15px;
+
   font-size: 1rem;
   list-style: none;
 }
@@ -143,4 +149,39 @@ footer {
 .bi-discord {
   font-size: 30px;
   color: white;
+}
+
+.buy_button {
+  background-color: #6f42c1;
+  border-radius: 10px;
+  border: none;
+  color: #0b0b0b;
+}
+
+@media (max-width: 768px) {
+  .buy_button {
+    padding: 2px 6px;
+    font-size: 0.75rem;
+    border-radius: 10px;
+    white-space: nowrap;
+  }
+}
+
+.loader {
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid #6f42c1;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  display: inline-block;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
